fixed splash page stretching issue

--- a/components/Parallax.module.css
+++ b/components/Parallax.module.css
@@ -7,6 +7,8 @@
   position: relative;
   width: 100%;
   height: 100vh;
+  background-size: cover;
+  background-position: center center; /* Keep the image centered */
 }
 
 /* Parallax Layer */
@@ -16,10 +18,13 @@
   height: 100vh;
   aspect-ratio: 1.8125;
   top: 0;
+  left: 0;
+  right: 0;
   bottom: 0;
   object-fit: cover;
-  background-size: cover;
+  background-size: 100% 100%;
   background-position: center center; /* Keep the image centered */
+  background-repeat: "repeat-x";
   z-index: 1; /* Ensure layers stack correctly */
 }
 
@@ -28,10 +33,12 @@
   position: absolute; /* Fixes it to a certain position */
   top: 0; /* Adjust to where you want the static layer */
   left: 0;
+  right: 0;
+  bottom: 0;
   width: 100vw; /* Full width */
   height: 100vh; /* Full height */
   aspect-ratio: 1.8125;
-  background-size: cover;
+  background-size: 100% 100%;
   background-position: center center;
   z-index: 1; /* To ensure it's above the background layers but below parallax layers */
 }
